# osLabs

lab1/: CMakeLists.txt  main.cpp
lab1/doc/: report.tex
lab1/include/: parent.hpp
lab1/src/: parent.cpp
lab1/tests/: CMakeLists.txt  test.cpp
lab2/: CMAkeLists.txt  main.cpp
lab2/doc/: report.tex
lab3/doc/: report.tex
lab4/doc/: report.tex
lab5-7/doc/: report.tex
lab8/doc/: report.tex
СP/doc/: report.tex
